Bluewolf SFMTA/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Hearing_Decision_Letter__c</fullName>
        <description>Displays how the protester wants to receive the hearing decision letter.</description>
        <label>Hearing Decision Letter</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hearing_Officer__c</fullName>
        <label>Hearing Officer</label>
        <picklist>
            <picklistValues>
                <fullName>J_Rosenberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mike_Hanrahan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sally_Abbott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eugene_Chin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carlton Clark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walter Davis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Darlene Delphino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>James Doyle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henry Epstein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diane Fong-Torres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mike Hawkins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ivan Morales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terry Moran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Rand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rudy Sebastian</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hearing_Results__c</fullName>
        <label>Hearing Results</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved with Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disapproved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hearing_Time__c</fullName>
        <description>Hearing Time Slots</description>
        <label>Hearing Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hearing_Type__c</fullName>
        <label>Hearing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Web</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_is_the_event_marketed_publicized__c</fullName>
        <label>How is the event marketed/publicized?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_many_bars_stations__c</fullName>
        <label>How many bars/stations</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_affirm_the_statements_above__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should go with the Block Party Qualification questions field.</description>
        <label>I affirm the statements above</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_agree_with_the_terms_stated_above__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I agree with the terms stated above</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_uploaded_a_detailed_course_map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have uploaded a detailed course map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_uploaded_a_posting_removal_letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have uploaded a posting removal letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_uploaded_a_recycling_refuse_plan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Included should be the types and locations of recycling and refuse containers and the name any organization(s) with whom the applicant has contracted for these services. Further recycling requirements are listed in an attachment to the application</inlineHelpText>
        <label>I have uploaded a recycling/refuse plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_uploaded_a_security_plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have uploaded a security plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_uploaded_a_site_plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have uploaded a site plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_uploaded_a_water_plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have uploaded a water plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_uploaded_additional_documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have uploaded additional documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_uploaded_an_EMS_plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have uploaded an EMS plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_uploaded_an_insurance_document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have uploaded an insurance document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_uploaded_an_outreach_plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have uploaded an outreach plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Y__c</fullName>
        <label>If Yes to Frontage, what side</label>
        <picklist>
            <picklistValues>
                <fullName>Front</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Side</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rear of Building</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_monthly_which_days__c</fullName>
        <inlineHelpText>ie. the 15th of every month, or the second Tuesday.</inlineHelpText>
        <label>If monthly, which day(s)?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_name_of_Film_SF_coordinator__c</fullName>
        <label>If yes, name of Film SF coordinator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Response_Date__c</fullName>
        <description>Date of initial action on case.</description>
        <label>Initial Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Insurance should be submitted with the application or at least 2 months in advance of the event. Lack of insurance will invalidate the permit.</inlineHelpText>
        <label>Insurance Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Needed_by_Date__c</fullName>
        <label>Insurance Needed by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intended_Users__c</fullName>
        <label>Intended Users</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intersection_Impacted__c</fullName>
        <label>Intersection(s) Impacted</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Food_Free_or_For_Sale__c</fullName>
        <label>Food For Free or For Sale</label>
        <picklist>
            <picklistValues>
                <fullName>Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Sale</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Requested_Zone_Within_Frontage__c</fullName>
        <label>Is Requested Zone Within Frontage</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_there_a_fee_for_entry__c</fullName>
        <label>Is there a fee for entry?</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation optional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Is_this_a_FilmSF_permitted_film_project__c</fullName>
        <label>Is this a Film SF permitted film project</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Detail__c</fullName>
        <label>Issue Detail</label>
        <picklist>
            <controllingField>Issue__c</controllingField>
            <picklistValues>
                <fullName>ADA - Muni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sidewalks and ramps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF Paratransit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bicycle Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bikeshare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lanes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking (Bicycle)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routes (Bicycle)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety (Bicycle)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation Engineering Hearings and Reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interdepartmental Staff Committee on Traffic and Transportation (ISCOTT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printed Materials (signage, maps, etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Outreach and Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking (Construction)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Sharing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citations Protest/Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Curbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metered</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <picklist>
            <picklistValues>
                <fullName>Accessibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bicycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board and Legislation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive &amp; Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enforcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micro-transit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pedestrian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Street Engineering</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Jurisdiction_Other__c</fullName>
        <label>Jurisdiction Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <picklist>
            <picklistValues>
                <fullName>City of San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF Port</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation &amp; Parks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Parks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lagan_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lagan ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <summarizedField>Payment__c.CreatedDate</summarizedField>
        <summaryForeignKey>Payment__c.Case__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lead_Time_in_Days__c</fullName>
        <label>Lead Time in Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Liability__c</fullName>
        <defaultValue>&quot;Under penalty of perjury, I have read and understand the requirements of hosting an event requiring a temporary street closure and I have completed the application and prepared the proposed site plan to the best of my ability.&quot;</defaultValue>
        <label>Legal Liability</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legislature__c</fullName>
        <label>Legislature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>License_Plate_State__c</fullName>
        <inlineHelpText>Please enter the state abbreviation in CAPS of the state the license plate was issued.</inlineHelpText>
        <label>License Plate State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Plate__c</fullName>
        <label>License Plate</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_View_Contact__c</fullName>
        <description>This field is used to determine if the user logged into the community is the Contact on the Case to filter the Community &quot;My Open Cases&quot; list view.</description>
        <formula>ContactId = $User.ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List View Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Details__c</fullName>
        <inlineHelpText>Any other information you would like to share about the location</inlineHelpText>
        <label>Location Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Make_Payment_Color_Curbs__c</fullName>
        <formula>IF(
AND( 
OR( 
RecordType.Name = &quot;Color Curbs&quot;, RecordType.Name = &quot;Driveway Red Tip&quot;),OR(Payment_Due_Date__c &gt;= TODAY(), ISBLANK(Payment_Due_Date__c)), Net_Due__c&gt;0), HYPERLINK ($Setup.SFMTAPayment_SiteUrl__c.Payment_SiteUrl__c&amp;&quot;?id=&quot;&amp;Id, IMAGE(&quot;/resource/1480802148000/new_cc_icon&quot;, &quot;Payment Is Not Accepted At This Time&quot;)), &quot;Payment Is Not Accepted At This Time&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Make Payment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_Payment_Street_Closures__c</fullName>
        <formula>IF( 
AND(
OR(RecordType.Name = &quot;Special Events&quot;,
RecordType.Name = &quot;Special Events Read-Only&quot;,  
RecordType.Name = &quot;Block Party&quot;,
RecordType.Name = &quot;Block Party Read-Only&quot;),
NOT(ISPICKVAL(Type, &quot;Film&quot;)), 
ISPICKVAL(Status, &quot;Submitted&quot;), ISPICKVAL(Method_of_Payment__c, &quot;Credit Card&quot;),
 Net_Due__c &gt; 0) , HYPERLINK ($Setup.SFMTAPayment_SiteUrl__c.Payment_SiteUrl__c&amp;&quot;?id=&quot;&amp;Id, IMAGE(&quot;/resource/1480802148000/new_cc_icon&quot;, &quot;Payment Is Not Due At This Time&quot;)), &quot;Payment Is Not Due At This Time&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Make Payment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_Payment_Temp_Signs__c</fullName>
        <formula>IF( 
AND(
OR(
Payment_Due_Date__c &gt;= TODAY(), ISBLANK(Payment_Due_Date__c)),  Net_Due__c&gt;0, RecordType.Name = &quot;Temporary Signs&quot;), HYPERLINK ($Setup.SFMTAPayment_SiteUrl__c.Payment_SiteUrl__c&amp;&quot;?id=&quot;&amp;Id, IMAGE(&quot;/resource/1480802148000/new_cc_icon&quot;, &quot;Payment Is Not Accepted At This Time&quot;)), &quot;Payment Is Not Accepted At This Time&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Make Payment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Numbers__c</fullName>
        <label>Meter Numbers (Optional)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Shop_Specs__c</fullName>
        <label>Meter Shop Specs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method_of_Payment__c</fullName>
        <label>Method of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monitored_bicycle_parking_required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>including number of spaces provided which should be at least 1 % of your expected daily participants. This is a requirement for public events involving more than 2000 participants per day of the event.</inlineHelpText>
        <label>Monitored bicycle parking required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_Installed__c</fullName>
        <label>Month Installed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Muni_Impact__c</fullName>
        <label>Muni Impact</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Muni_Impact_text__c</fullName>
        <label>If yes, explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Net_Due__c</fullName>
        <formula>Sub_Total_Services__c  -   Total_Sum_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>New incoming email from customer</inlineHelpText>
        <label>New email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_ADA_compliant_toilets_required__c</fullName>
        <label># of ADA compliant toilets required</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Pickups_Deliveries_Daily__c</fullName>
        <label>Number of Pickups/Deliveries Daily</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Racks__c</fullName>
        <inlineHelpText>Each rack accommodates two bicycles</inlineHelpText>
        <label>Number of Racks Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_blue_zones_required__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of blue zones required</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Odd_Even__c</fullName>
        <label>Odd/Even</label>
        <picklist>
            <picklistValues>
                <fullName>Odd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Even</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Open_to_the_Public__c</fullName>
        <label>Open to the Public?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Hosting__c</fullName>
        <inlineHelpText>This is the organization hosting the event.</inlineHelpText>
        <label>Organization Hosting</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Jurisdictions_Impacted__c</fullName>
        <label>Other Jurisdictions Impacted</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Paint_Shop_Specs__c</fullName>
        <label>Paint Shop Specs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parcel__c</fullName>
        <label>Parcel #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Case_Tow_Date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Case Tow Date</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parking_Areas_In_Requested_Zone__c</fullName>
        <label>Parking Areas (In Requested Zone)</label>
        <picklist>
            <picklistValues>
                <fullName>Metered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmetered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date__c</fullName>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Person_Responsible_for_Maintenance__c</fullName>
        <label>Person Responsible for Maintenance</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Police_Districts__c</fullName>
        <label>Police Districts</label>
        <picklist>
            <picklistValues>
                <fullName>Bayview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ingleside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taraval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenderloin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Port_Approval_Number__c</fullName>
        <label>Port Approval Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_Removal_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posting Removal Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Posting_Removal_Letter_by_Date__c</fullName>
        <label>Posting Removal Letter by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Staff_Date__c</fullName>
        <label>Pre Staff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Contact__c</fullName>
        <label>Preferred Method of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Street_Closure_Text__c</fullName>
        <label>If yes, when?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Procurement_Funding__c</fullName>
        <label>Procurement Funding</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>